--- a/OrgSoft.csproj
+++ b/OrgSoft.csproj
@@ -134,6 +134,31 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\TeamModel.cs" />
+    <Compile Include="OrgSoft.Data\obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
+    <Compile Include="OrgSoft.Data\OrgSoftEntity.Context.cs" />
+    <Compile Include="OrgSoft.Data\OrgSoftEntity.Context1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OrgSoftEntity.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrgSoft.Data\OrgSoftEntity.cs" />
+    <Compile Include="OrgSoft.Data\OrgSoftEntity.Designer.cs">
+      <DependentUpon>OrgSoftEntity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OrgSoft.Data\OrgSoftEntity1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OrgSoftEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrgSoft.Data\OrgSoftEntity1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OrgSoftEntity.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="OrgSoft.Data\Properties\AssemblyInfo.cs" />
+    <Compile Include="OrgSoft.Data\tblTeam.cs">
+      <DependentUpon>OrgSoftEntity.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -491,6 +516,14 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="OrgSoft.Data\OrgSoftEntity.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>OrgSoftEntity.Context1.cs</LastGenOutput>
+    </Content>
+    <Content Include="OrgSoft.Data\OrgSoftEntity.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>OrgSoftEntity1.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -632,6 +665,18 @@
     <Content Include="assets\vendor\tinymce\composer.json" />
     <Content Include="assets\vendor\tinymce\package.json" />
     <Content Include="assets\vendor\tinymce\README.md" />
+    <Content Include="OrgSoft.Data\App.Config" />
+    <Content Include="OrgSoft.Data\obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <Content Include="OrgSoft.Data\obj\Debug\OrgSoft.Data.csproj.AssemblyReference.cache" />
+    <Content Include="OrgSoft.Data\OrgSoft.Data.csproj" />
+    <EntityDeploy Include="OrgSoft.Data\OrgSoftEntity.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>OrgSoftEntity1.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="OrgSoft.Data\OrgSoftEntity.edmx.diagram">
+      <DependentUpon>OrgSoftEntity.edmx</DependentUpon>
+    </Content>
+    <None Include="OrgSoft.Data\packages.config" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -663,6 +708,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="OrgSoft.Data\bin\Debug\" />
+    <Folder Include="OrgSoft.Data\obj\Debug\TempPE\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
@@ -788,6 +835,7 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="OrgSoft.Data\OrgSoft.Data.csproj">
